--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,15 @@
     scroll-behavior: smooth;
     overflow-x: hidden;
   }
+  /* styles/globals.css */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
   
   .menu-container {
     padding: 20px;
